# hyprconf

./: Cargo.toml
docs/: default.conf  hyprland-gui-prompt.md  hyprland.conf  prompt-clean.txt
src/: app.rs  main.rs
src/config/: mod.rs  models.rs  parser.rs  tests.rs  utils.rs
src/config/models/: animations.rs  binds.rs  core.rs  cursor.rs  debug.rs  decoration.rs  devices.rs  dwindle.rs  ecosystem.rs  experimental.rs  general.rs  gestures.rs  group.rs  input.rs  master.rs  misc.rs  mod.rs  monitors.rs  opengl.rs  permissions.rs  render.rs  rules.rs  xwayland.rs
src/config/parser/: core.rs  mod.rs  utils.rs
src/config/parser/sections/: animations.rs  binds.rs  blur.rs  cursor.rs  debug.rs  decoration.rs  devices.rs  dwindle.rs  ecosystem.rs  experimental.rs  general.rs  gestures.rs  group.rs  input.rs  keybinds.rs  master.rs  misc.rs  mod.rs  monitors.rs  opengl.rs  permissions.rs  render.rs  rules.rs  shadow.rs  snap.rs  touch.rs  xwayland.rs
src/config/writer/: core.rs  mod.rs  utils.rs
src/config/writer/sections/: animations.rs  binds.rs  blur.rs  cursor.rs  debug.rs  decoration.rs  dwindle.rs  general.rs  gestures.rs  group.rs  input.rs  master.rs  misc.rs  mod.rs  opengl.rs  render.rs  shadow.rs  snap.rs  xwayland.rs
src/safety/: mod.rs
src/ui/: mod.rs  window.rs
src/ui/tabs/: general.rs  mod.rs
