[package]
name = "hyprconf"
version = "0.1.0"
edition = "2021"
authors = ["Andre Beltrame <10011191+beltr4@users.noreply.github.com>"]
description = "A graphical configuration tool for Hyprland"
license = "MIT"

[dependencies]
# GTK4 bindings
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
glib = "0.17"
# For async operations
tokio = { version = "1.28", features = ["full"] }
# For configuration file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# File operations and paths
dirs = "5.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Command execution
execute = "0.2"
# Logging
log = "0.4"
env_logger = "0.10"

[build-dependencies]
glib-build-tools = "0.17.0"